--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -70,7 +70,7 @@
 		<hr>
 		<div class="row">
 			<div class="col-lg-6 mx-auto">
-				<form action="https://formspree.io/brainic777@gmail.com" method="POST" class="needs-validation"
+				<form action="https://formspree.io/f/mqkwaavn" method="POST" class="needs-validation"
 					novalidate>
 					<input type="hidden" name="_next" value="/HTML/contact.html" />
 					<input type="hidden" name="_subject" value="Message from brianpho.com" />
