--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -6,8 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- Bootstrap CSS -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 	<link href="../CSS/custom.css" rel="stylesheet">
 	<link rel="icon" type="image/png" href="../Images/Favicon/favicon-32x32.png" sizes="32x32" />
 	<title>Courses</title>
@@ -59,9 +58,8 @@
 		<h1 class="text-center display-4">Courses</h1>
 		<div class="lead">
 			<p>
-				I completed my bachelors in software engineering at the University of Calgary and I'm currently in
-				a masters in neuroscience at Western University. If you're looking for my course notes, you can
-				find them <a href="https://brianpho.com/CR4-DL/notes/">here</a>. Hover over a course to see its title.
+				I completed my BSc Software Engineering at the University of Calgary and my MSc Neuroscience at Western University.
+				You can find my course notes <a href="https://brianpho.com/CR4-DL/notes/">here</a>. Hover over a course to see its title.
 			</p>
 		</div>
 		<hr>
@@ -71,7 +69,7 @@
 				<h2 class="accordion-header" id="flush-headingOne">
 					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
 						data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-						Bachelors in Software Engineering
+						BSc Software Engineering (Sept 2015 - Apr 2020)
 					</button>
 				</h2>
 				<div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
@@ -79,17 +77,17 @@
 					<div class="accordion-body text-center">
 						<table class="table table-bordered">
 							<thead>
-								<tr class="academic_year">
+								<tr class="table-dark">
 									<th colspan="4" scope="colgroup">Year 1 (2015 - 2016)</th>
 								</tr>
-								<tr class="academic_semester">
+								<tr class="table-light">
 									<th class="w-25" scope="col">FALL 2015</th>
 									<th class="w-25" scope="col">WINTER 2016</th>
 									<th class="w-25" scope="col">SPRING 2016</th>
 									<th class="w-25" scope="col">SUMMER 2016</th>
 								</tr>
 							</thead>
-							<tbody>
+							<tbody class="table-group-divider">
 								<tr>
 									<td title="Engineering Design and Communication">ENGG 200</td>
 									<td title="Behaviour of Liquids, Gases and Solids">ENGG 201</td>
@@ -124,17 +122,17 @@
 						</table>
 						<table class="table table-bordered">
 							<thead>
-								<tr class="academic_year">
+								<tr class="table-dark">
 									<th colspan="4" scope="colgroup">Year 2 (2016 - 2017)</th>
 								</tr>
-								<tr class="academic_semester">
+								<tr class="table-light">
 									<th class="w-25" scope="col">FALL 2016</th>
 									<th class="w-25" scope="col">WINTER 2017</th>
 									<th class="w-25" scope="col">SPRING 2017</th>
 									<th class="w-25" scope="col">SUMMER 2017</th>
 								</tr>
 							</thead>
-							<tbody>
+							<tbody class="table-group-divider">
 								<tr>
 									<td title="Digital Circuits">ENEL 353</td>
 									<td title="Signals and Transforms">ENEL 327</td>
@@ -171,17 +169,17 @@
 						</table>
 						<table class="table table-bordered">
 							<thead>
-								<tr class="academic_year">
+								<tr class="table-dark">
 									<th colspan="4" scope="colgroup">Year 3 (2017 - 2018)</th>
 								</tr>
-								<tr class="academic_semester">
+								<tr class="table-light">
 									<th class="w-25" scope="col">FALL 2017</th>
 									<th class="w-25" scope="col">WINTER 2018</th>
 									<th class="w-25" scope="col">SPRING 2018</th>
 									<th class="w-25" scope="col">SUMMER 2018</th>
 								</tr>
 							</thead>
-							<tbody>
+							<tbody class="table-group-divider">
 								<tr>
 									<td title="Principles of Software Design">ENSF 480</td>
 									<td title="Software Architecture">SENG 401</td>
@@ -215,17 +213,17 @@
 						</table>
 						<table class="table table-bordered">
 							<thead>
-								<tr class="academic_year">
+								<tr class="table-dark">
 									<th colspan="4" scope="colgroup">Year 4 (2018 - 2019)</th>
 								</tr>
-								<tr class="academic_semester">
+								<tr class="table-light">
 									<th class="w-25" scope="col">FALL 2018</th>
 									<th class="w-25" scope="col">WINTER 2019</th>
 									<th class="w-25" scope="col">SPRING 2019</th>
 									<th class="w-25" scope="col">SUMMER 2019</th>
 								</tr>
 							</thead>
-							<tbody>
+							<tbody class="table-group-divider">
 								<tr>
 									<td title="Internship in Engineering II">INTE 513.02</td>
 									<td title="Internship in Engineering III">INTE 513.03</td>
@@ -235,17 +233,17 @@
 						</table>
 						<table class=" table table-bordered">
 							<thead>
-								<tr class="academic_year">
+								<tr class="table-dark">
 									<th colspan="4" scope="colgroup">Year 5 (2019 - 2020)</th>
 								</tr>
-								<tr class="academic_semester">
+								<tr class="table-light">
 									<th class="w-25" scope="col">FALL 2019</th>
 									<th class="w-25" scope="col">WINTER 2020</th>
 									<th class="w-25" scope="col">SPRING 2020</th>
 									<th class="w-25" scope="col">SUMMER 2020</th>
 								</tr>
 							</thead>
-							<tbody>
+							<tbody class="table-group-divider">
 								<tr>
 									<td title="Entrepreneurial Capstone Design Project I">ENGG 503</td>
 									<td title="Entrepreneurial Capstone Design Project II">ENGG 504</td>
@@ -288,7 +286,7 @@
 
 					<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
 						data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-						Masters in Neuroscience
+						MSc Neuroscience (Sept 2020 - Aug 2022)
 					</button>
 				</h2>
 				<div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
@@ -296,16 +294,16 @@
 					<div class="accordion-body text-center">
 						<table class="table table-bordered">
 							<thead>
-								<tr class="academic_year">
+								<tr class="table-dark">
 									<th colspan="4" scope="colgroup">Year 1 (2020 - 2021)</th>
 								</tr>
-								<tr class="academic_semester">
+								<tr class="table-light">
 									<th class="w-25" scope="col">FALL 2020</th>
 									<th class="w-25" scope="col">WINTER 2021</th>
 									<th class="w-25" scope="col">SUMMER 2021</th>
 								</tr>
 							</thead>
-							<tbody>
+							<tbody class="table-group-divider">
 								<tr>
 									<td title="Perspectives in Neuroscience" colspan="3">NEUROSCI 9510Y</td>
 								</tr>
@@ -318,16 +316,16 @@
 						</table>
 						<table class="table table-bordered">
 							<thead>
-								<tr class="academic_year">
+								<tr class="table-dark">
 									<th colspan="4" scope="colgroup">Year 2 (2021 - 2022)</th>
 								</tr>
-								<tr class="academic_semester">
+								<tr class="table-light">
 									<th class="w-25" scope="col">FALL 2021</th>
 									<th class="w-25" scope="col">WINTER 2022</th>
 									<th class="w-25" scope="col">SUMMER 2022</th>
 								</tr>
 							</thead>
-							<tbody>
+							<tbody class="table-group-divider">
 								<tr>
 									<td title="Perspectives in Neuroscience" colspan="3">NEUROSCI 9511Y</td>
 								</tr>
@@ -344,9 +342,8 @@
 	</div>
 
 	<!-- Bootstrap JS -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
-	</script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
